--- a/localization/en.json
+++ b/localization/en.json
@@ -137,7 +137,7 @@
   "bluePallet.anonymousBuying": "Anonymous Buying",
   "bluePallet.anonymouslySell": "Anonymously Sell to our entire network of buyers",
   "bluePallet.buyerBenefits": "Buyer Benefits",
-  "bluePallet.footerInfo": "Blue Trade only displays inventory of {companyName} Members. Blue Trade does not manufacture, distribute, or possess any products listed on the Blue Trade Marketplace. Blue Trade will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
+  "bluePallet.footerInfo": "BlueTrade only displays inventory of {companyName} Members. BlueTrade does not manufacture, distribute, or possess any products listed on the BlueTrade Marketplace. BlueTrade will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
   "bluePallet.freeReturns": "Free Returns*",
   "bluePallet.insuredAR": "100% Insured AR",
   "bluePallet.netPayments": "NET10 Payments",
@@ -147,8 +147,8 @@
   "bluePallet.supplySide": "Supply Side Protections",
   "bluePallet.verifiedBuyers": "Trade Pass Verified Buyers",
   "bluePallet.verifiedSellers": "Trade Pass Verified Sellers",
-  "bluePallet.whatIs": "What is Blue Trade?",
-  "bluePallet.whatIs.answer": "Blue Trade anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through Blue Trade comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that Blue Trade transactions are safe, secure, simple, and reliable.",
+  "bluePallet.whatIs": "What is BlueTrade?",
+  "bluePallet.whatIs.answer": "BlueTrade anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through BlueTrade comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that BlueTrade transactions are safe, secure, simple, and reliable.",
   "broadcast.byRegion": "Regions",
   "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
@@ -579,7 +579,7 @@
   "global.reject": "Reject",
   "global.accept": "Accept",
   "global.decline": "Decline",
-  "global.echoTitle": "Blue Pallet",
+  "global.echoTitle": "BlueTrade",
   "global.description": "Description",
   "global.registerDwollaAcc": "Register Dwolla Account",
   "global.myProfile": "My Profile",
@@ -1371,10 +1371,10 @@
   "myInventory.acceptBids": "Accept bids on offer?",
   "myInventory.whoShouldSee": "Who should see this offer?",
   "myInventory.listingShare": "Enable Listing Share for this offer?",
-  "myInventory.allSubtitle": "My Network + Blue Trade",
+  "myInventory.allSubtitle": "My Network + BlueTrade",
   "myInventory.myNetworkOnly": "My Network Only",
   "myInventory.myNetworkOnlySubtitle": "Members I'm Connected To",
-  "myInventory.bluePalletDirect": "Blue Trade",
+  "myInventory.bluePalletDirect": "BlueTrade",
   "myInventory.bluePalletDirectSubtitle": "Open Marketplace",
   "sharedListings.internalProductName": "Internal Product Name",
   "sharedListings.seller": "Seller",
@@ -2300,7 +2300,7 @@
   "marketplace.confirm.deleteBid.Content": "Do you really want to remove Bid?",
   "marketplace.viewOnly": "View Only",
   "marketplace.WeAreVerifyingYourIdentity": "We're verifying your identity",
-  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on Blue Trade. You will only be able to view Blue Trade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
+  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on BlueTrade. You will only be able to view BlueTrade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
   "marketplace.keepBrowsing": "Keep Browsing",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
