DT-568 BlueTrade vs BluePallet round two...

--- a/localization/en.json
+++ b/localization/en.json
@@ -579,7 +579,7 @@
   "global.reject": "Reject",
   "global.accept": "Accept",
   "global.decline": "Decline",
-  "global.echoTitle": "BlueTrade",
+  "global.echoTitle": "BluePallet",
   "global.description": "Description",
   "global.registerDwollaAcc": "Register Dwolla Account",
   "global.myProfile": "My Profile",
