--- a/localization/en.json
+++ b/localization/en.json
@@ -2605,6 +2605,40 @@
   "marketplace.leadTime": "Lead Time (days)",
   "marketplace.tooltipConformingIcon": "Shows if Product Offer has set conforming attribute",
   "marketplace.tooltipExpired": "Shows if Product Offer is expired",
+  "onboarding.setup.indicator.business.verification": "Business Verification",
+  "onboarding.setup.indicator.agreements.and.terms": "Agreements & Terms",
+  "onboarding.setup.indicator.ein.documents": "EIN Document SS-4",
+  "onboarding.setup.indicator.articles.of.incorporation": "Articles of Incorporation",
+  "onboarding.setup.indicator.business.information": "Business Information",
+  "onboarding.setup.indicator.industry.type": "Industry Type",
+  "onboarding.setup.indicator.ownership.verification": "Ownership Verification",
+  "onboarding.setup.indicator.control.person": "Control Person",
+  "onboarding.setup.indicator.beneficial.owners": "Beneficial Owners",
+  "onboarding.setup.indicator.business.profiling": "Business Profiling",
+  "onboarding.setup.indicator.marketing.material": "Marketing Material",
+  "onboarding.setup.indicator.certificate.of.insurance": "Certificate of Insurance",
+  "onboarding.setup.indicator.risk.tolerance": "Risk Tolerance",
+  "onboarding.setup.indicator.resale.certificates": "Resale Certificates",
+  "onboarding.setup.indicator.ownership.certifications": "Ownership Certifications",
+  "onboarding.what.is.tradepass": "TradePass is a protection and security solution used to gather specific information to ensure member integrity on the BluePallet platform. TradePass specifically looks to verify every business' identiy and to assess operational, commercial and financial integrity. This gives our members the confidence to conduct their business safely and securely. All BluePallet members are required to complete the TradePass verification process.",
+  "onboarding.what.you.need": "Here's what you need:",
+  "onboarding.business.profile": "Business Profile",
+  "onboarding.business.verification.info": "Business Verification authenticates the identify of your business and verifies that your business' financial and commercial profile meets BluePallet standards.",
+  "onboarding.ein.documentation": "EIN Documentation",
+  "onboarding.entity.type": "Entity Type",
+  "onboarding.ownership.verification.info": "Verifying the ownership of your company is required under the Bank Secrecy Act and is intended to prevent fraud, money laundering, and the financing of terrorism.",
+  "onboarding.business.profile.info": "Profiling your business insures that operational standards are met and you representation on BluePallet is accurate and complete.",
+  "onboarding.get.verified": "Get Verified",
+  "onboarding.minutes": "minutes",
+  "onboarding.occupation": "Occupation",
+  "onboarding.ssn": "Social Security Number",
+  "onboarding.company.logo": "Company Logo",
+  "onboarding.markets": "Market(s)",
+  "onboarding.beneficial.owner.twenty.five": "Do you own 25% or more of the company (Beneficial Owner)?",
+  "onboarding.verify.personal.information": "Verify Personal Information",
+  "onboarding.business.role": "Business Role (Title)",
+  "onboarding.enter.business.role": "Enter business role",
+  "onboarding.ssn.placeholder": "xxx-xx-xxxx",
   "order.VENDOR": "VENDOR",
   "order.CUSTOMER": "CUSTOMER",
   "order.returnShippingSale": "ORDER RETURN SHIPPING",
