--- a/localization/en.json
+++ b/localization/en.json
@@ -2300,7 +2300,7 @@
   "marketplace.confirm.deleteBid.Content": "Do you really want to remove Bid?",
   "marketplace.viewOnly": "View Only",
   "marketplace.WeAreVerifyingYourIdentity": "We're verifying your identity",
-  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on BlueTrade. You will only be able to view BlueTrade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
+  "marketplace.viewOnlyPopupText": "For your security, we need some time to verify your identity and your financial information before you buy or sell on BlueTrade. You will only be able to view BlueTrade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
   "marketplace.keepBrowsing": "Keep Browsing",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
@@ -2482,6 +2482,8 @@
   "settings.beneficialOwnerNum": "Beneficial owner #{num}",
   "settings.addBeneficialOwner": "Add beneficial owner",
   "settings.removeBeneficialOwner": "Remove beneficial owner",
+  "settings.addOwner": "Add Owner",
+  "settings.removeOwner": "Remove Owner",
   "settings.editLogistics": "Edit Logistics",
   "settings.addLogistics": "Add Logistics",
   "settings.tables.users.buttonAdd": "Add User",
@@ -2607,6 +2609,67 @@
   "marketplace.leadTime": "Lead Time (days)",
   "marketplace.tooltipConformingIcon": "Shows if Product Offer has set conforming attribute",
   "marketplace.tooltipExpired": "Shows if Product Offer is expired",
+  "onboarding.setup.indicator.business.verification": "Business Verification",
+  "onboarding.setup.indicator.agreements.and.terms": "Agreements & Terms",
+  "onboarding.setup.indicator.ein.documents": "EIN Document SS-4",
+  "onboarding.setup.indicator.articles.of.incorporation": "Articles of Incorporation",
+  "onboarding.setup.indicator.business.information": "Business Information",
+  "onboarding.setup.indicator.industry.type": "Industry Type",
+  "onboarding.setup.indicator.ownership.verification": "Ownership Verification",
+  "onboarding.setup.indicator.control.person": "Control Person",
+  "onboarding.setup.indicator.beneficial.owners": "Beneficial Owners",
+  "onboarding.setup.indicator.register.owners": "Register Owners",
+  "onboarding.setup.indicator.business.profiling": "Business Profiling",
+  "onboarding.setup.indicator.marketing.material": "Marketing Material",
+  "onboarding.setup.indicator.certificate.of.insurance": "Certificate of Insurance",
+  "onboarding.setup.indicator.certificate.of.insurance.coi": "Certificate of Insurance (COI)",
+  "onboarding.setup.indicator.risk.tolerance": "Risk Tolerance",
+  "onboarding.setup.indicator.resale.certificates": "Resale Certificates",
+  "onboarding.setup.indicator.ownership.certifications": "Ownership Certifications",
+  "onboarding.setup.indicator.ownership.certifications.title": "Federal Ownership Certifications (Optional)",
+  "onboarding.setup.indicator.ownership.certifications.info": "Federal Ownership Certifications improve your eligibility to do business with other TradePass members who value these certifications.",
+  "onboarding.control.person.confirm": "Please confirm that you will be the control person",
+  "onboarding.legal.agreements": "Legal Agreements",
+  "onboarding.legal.agreements.info": "Here are a few legal documents you'll have to read and accept before finishing.",
+  "onboarding.what.is.tradepass": "TradePass is a protection and security solution used to gather specific information to ensure member integrity on the BluePallet platform. TradePass specifically looks to verify every business' identiy and to assess operational, commercial and financial integrity. This gives our members the confidence to conduct their business safely and securely. All BluePallet members are required to complete the TradePass verification process.",
+  "onboarding.what.you.need": "Here's what you need:",
+  "onboarding.business.profile": "Business Profile",
+  "onboarding.business.verification.info": "Business Verification authenticates the identify of your business and verifies that your business' financial and commercial profile meets BluePallet standards.",
+  "onboarding.ein.documentation": "EIN Documentation",
+  "onboarding.entity.type": "Entity Type",
+  "onboarding.ownership.verification.info": "Verifying the ownership of your company is required under the Bank Secrecy Act and is intended to prevent fraud, money laundering, and the financing of terrorism.",
+  "onboarding.business.profile.info": "Profiling your business insures that operational standards are met and you representation on BluePallet is accurate and complete.",
+  "onboarding.get.verified": "Get Verified",
+  "onboarding.minutes": "minutes",
+  "onboarding.occupation": "Occupation",
+  "onboarding.ssn": "Social Security Number",
+  "onboarding.company.logo": "Company Logo",
+  "onboarding.markets": "Market(s)",
+  "onboarding.beneficial.owner.twenty.five": "Do you own 25% or more of the company (Beneficial Owner)?",
+  "onboarding.verify.personal.information": "Verify Personal Information",
+  "onboarding.business.role": "Business Role (Title)",
+  "onboarding.enter.business.role": "Enter business role",
+  "onboarding.ssn.placeholder": "xxx-xx-xxxx",
+  "onboarding.beneficial.ownership": "Beneficial Ownership",
+  "onboarding.outline.beneficial.ownership": "Please outline the beneficial ownership of your company below.",
+  "onboarding.legal.name": "Legal Name",
+  "onboarding.contact.information": "Contact Information",
+  "onboarding.income.type": "Income Type",
+  "onboarding.email.sent": "Email(s) Sent",
+  "onboarding.emails.sent.beneficial.owners": "Emails have been sent to the listed beneficial owners.",
+  "onboarding.add.company.logo": "Add Your Company Logo (.jpg or .png files acceptable)",
+  "onboarding.company.slogan.or.tagline": "Add your company Slogan or Tagline?",
+  "onboarding.company.slogan.or.tagline.example": "Ex. Simplifying Trade for Complex Industries",
+  "onboarding.social.media": "Please include links to as many social media pages as you have.",
+  "onboarding.general.liability.coi": "General Liability COI",
+  "onboarding.optional.files": "What files are optional?",
+  "onboarding.transportation.insurance": "Transportation Insurance COI",
+  "onboarding.property.insurance.coi": "Property Insurance COI",
+  "onboarding.professional.liability.insurance": "Professional Liability Insurance COI",
+  "onboarding.other.forms.of.insurance": "Other forms of Insurance",
+  "onboarding.what.is.risk.tolerance": "Risk tolerance is an assessment of critical business factors that TradePass will use to pre-evaluate your potential customers and partners. Using proprietary technology, TradePass will verify these customers/partners exceed, meet, or are below your threshold for conducting business. We will always allow you to view and manage your invitations to connect with other members and will never reject an invitation on your behalf.",
+  "onboarding.browse": "Browse",
+  "onboarding.congratulations": "Congratulations!",
   "order.VENDOR": "VENDOR",
   "order.CUSTOMER": "CUSTOMER",
   "order.returnShippingSale": "ORDER RETURN SHIPPING",
@@ -3216,7 +3279,7 @@
   "velloci.ownerInformation.noOne25Title": "What if no one owns greater than 25%?",
   "velloci.ownerInformation.otherBeneficialOwner": "Are there any other Beneficial Owners?",
   "velloci.ownerInformation.completeNow": "COMPLETE NOW OR EMAIL BENEFICIAL OWNERS",
-  "velloci.ownerInformation.wouldComplete": "Would you like to complete this form for the remaining beneficial owners or email them a link to complete?",
+  "velloci.ownerInformation.wouldComplete": "Would you like to complete this form for the remaining beneficial owners or email them a link to complete? ",
   "velloci.ownerInformation.needInfo": "Here is the info you'll need:",
   "velloci.ownerInformation.obtainInfoTitle": "Can't Obtain this Information",
   "velloci.companyVerification.infoTitle": "Beneficial Owner Information",
@@ -3433,6 +3496,7 @@
   "detailCompany.naics": "NAICS",
   "detailCompany.naics.placeholder": "Select NAICS",
   "insurance.subTitle": "Add any Certificates of Insurance that you may have.",
+  "insurance.boost": "This material will boost your TradePass Score.",
   "insurance.insurance": "Insurance",
   "insurance.addYour": "Add Your {name} Insurance",
   "insurance.insuranceType": "Insurance Type",
