DT-728 Use TradePass API for Document Statuses

--- a/localization/en.json
+++ b/localization/en.json
@@ -3372,10 +3372,10 @@
   "myNetworks.detailRow.tradePassConnection": "TradePass Connections",
   "myNetworks.detailRow.marketingData": "Marketing & Social Media",
   "myNetworks.detailRow.verifiedData": "Verified Data",
-  "myNetworks.detailRow.certificateInsurance": "Certificate of Insurance",
-  "myNetworks.detailRow.linkedBankAccounts": "Linked Bank Accounts",
-  "myNetworks.detailRow.articlesIncorporation": "Articles of Incorporation",
-  "myNetworks.detailRow.tradeOrganization": "Trade Organization",
+  "myNetworks.detailRow.insurance_automobile": "Certificate of Insurance (Automobile)",
+  "myNetworks.detailRow.insurance_workers_compensation": "Certificate of Insurance (Workers Compensation)",
+  "myNetworks.detailRow.formation_articles_of_incorporation": "Articles of Incorporation",
+  "myNetworks.detailRow.formation_articles_of_organization": "Trade Organization",
   "myNetworks.detailRow.disconnect": "Disconnect",
   "myNetworks.detailRow.reject": "Reject",
   "myNetworks.detailRow.accept": "Accept",
