DT-728 Generalize Business Doc Type names

--- a/localization/en.json
+++ b/localization/en.json
@@ -3375,7 +3375,7 @@
   "myNetworks.detailRow.insurance_automobile": "Certificate of Insurance (Automobile)",
   "myNetworks.detailRow.insurance_workers_compensation": "Certificate of Insurance (Workers Compensation)",
   "myNetworks.detailRow.formation_articles_of_incorporation": "Articles of Incorporation",
-  "myNetworks.detailRow.formation_articles_of_organization": "Trade Organization",
+  "myNetworks.detailRow.formation_articles_of_organization": "Articles of Organization",
   "myNetworks.detailRow.disconnect": "Disconnect",
   "myNetworks.detailRow.reject": "Reject",
   "myNetworks.detailRow.accept": "Accept",
