DT-728 Added documents limit on the TradePass page.

--- a/localization/en.json
+++ b/localization/en.json
@@ -3374,6 +3374,7 @@
   "myNetworks.detailRow.tradePassConnection": "TradePass Connections",
   "myNetworks.detailRow.marketingData": "Marketing & Social Media",
   "myNetworks.detailRow.verifiedData": "Verified Data",
+  "myNetworks.detailRow.insurance_general_liability": "Certificate of Insurance",
   "myNetworks.detailRow.insurance_automobile": "Certificate of Insurance (Automobile)",
   "myNetworks.detailRow.insurance_workers_compensation": "Certificate of Insurance (Workers Compensation)",
   "myNetworks.detailRow.formation_articles_of_incorporation": "Articles of Incorporation",
