--- a/localization/en.json
+++ b/localization/en.json
@@ -2302,6 +2302,7 @@
   "marketplace.WeAreVerifyingYourIdentity": "We're verifying your identity",
   "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on BlueTrade. You will only be able to view BlueTrade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
   "marketplace.keepBrowsing": "Keep Browsing",
+  "marketplace.allSellers": "All Sellers",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by ID",
