DT-710 Remove ignored file and change label for First name

--- a/localization/en.json
+++ b/localization/en.json
@@ -990,6 +990,7 @@
   "global.expiredDate": "Expired Date",
   "global.published": "Published",
   "global.enterName": "Enter Name",
+  "global.enterFirstName": "Enter First Name",
   "global.enterJobTitle": "Enter Job Title",
   "global.enterEmailAddress": "Enter Email Address",
   "global.enterAddressName": "Enter Address Name",
