DT-737 Shipping Quote Request Delivery Date added to Checkout.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1903,6 +1903,8 @@
   "checkout.freight.estDelivery": "Est. Delivery",
   "checkout.freight.etd": "ETD",
   "checkout.freight.service": "Service",
+  "checkout.freight.preferredDeliveryDate": "Preferred Delivery Date",
+  "checkout.freight.forMoreAccurateQuote": "For a more accurate quote please select a preferred delivery date.",
   "checkout.freight.quoteRequestSent": "Quote Request Sent",
   "checkout.freight.weWillNotifyYou": "We'll notify you when your custom quote has been created",
   "checkout.summary.orderSummary": "Order Summary",
@@ -1958,6 +1960,7 @@
   "createMenu.addWarehouse": "Add Warehouse",
   "validation.required": "Required",
   "validation.dateInFuture": "Date must be in future",
+  "validation.dateInFutureDays": "Date must be at least {days} days in future",
   "validation.dateInPast": "Date must be in past",
   "validation.dateNotInPast": "Date must not be in past",
   "validation.requiredNonConforming": "Required if Condition is Non Conforming",
