DT-736 Adjustmented Notifications / Shipping Quote Request, and Operations / Shipping Quote Requests tables / row details.

--- a/localization/en.json
+++ b/localization/en.json
@@ -28,6 +28,9 @@
   "alerts.nmfc": "NMFC",
   "alerts.freightClass": "Freight Class",
   "alerts.maxPkgsPallet": "Max PKGS / Pallet",
+  "alerts.palletCount": "Pallet Count",
+  "alerts.warehouseHours": "Warehouse Hours:",
+  "alerts.requestedDeliveryDate": "Requested delivery date:",
   "alerts.hazardous": "Hazardous",
   "alerts.stackable": "Stackable",
   "alerts.freezeProtect": "Freeze Protect",
