DT-840 Horizontal Bar Graph component updates, TradePass and My Network pages updates.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2311,6 +2311,7 @@
   "marketplace.keepBrowsing": "Keep Browsing",
   "marketplace.allSellers": "All Sellers",
   "myNetwork.riskMatch": "Risk Match",
+  "myNetwork.riskTolerance": "Risk Tolerance",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by ID",
@@ -2900,6 +2901,7 @@
   "title.settings.warehouses": "Warehouses",
   "title.settings.locations": "Locations",
   "title.settings.tradeCriteria": "Trade Criteria",
+  "title.settings.metrics": "Metrics",
   "title.inventory.myListings": "My Listings",
   "title.inventory.sharedListings": "Shared Listings",
   "title.inventory.myProducts": "My Products",
@@ -3343,6 +3345,10 @@
   "detailRow.credit_risk": "Credit Risk",
   "detailRow.violations": "Legal & Financial Violations",
   "detailRow.social_presence": "Social Presence",
+  "detailRow.transactions": "Transactions",
+  "detailRow.averageValue": "Average Value",
+  "detailRow.dateOfLastTransaction": "Date of Last Transaction",
+  "detailRow.connections": "Connections",
   "broadcast.saveAsTemplate": "Save as Templates",
   "product.packaging.selectFirst": "Please select Packaging Unit",
   "inventory.modal.editListing": "Edit Listing",
