DT-840 TradePass Page Design Update.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2312,6 +2312,11 @@
   "marketplace.allSellers": "All Sellers",
   "myNetwork.riskMatch": "Risk Match",
   "myNetwork.riskTolerance": "Risk Tolerance",
+  "myNetwork.insurance": "Insurance",
+  "myNetwork.credit": "Credit",
+  "myNetwork.beyondTerms": "Beyond\u00A0Terms",
+  "myNetwork.violations": "Violations",
+  "myNetwork.social": "Social",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by ID",
