DT-939 Tool to Generate BOL for FTL Orders

--- a/localization/en.json
+++ b/localization/en.json
@@ -2331,6 +2331,10 @@
   "operations.addShippingQuote": "Add Shipping Quote",
   "operations.editShippingQuote": "Edit Shipping Quote",
   "operations.carrierName": "Carrier Name",
+  "operations.relatedOrder": "Related order",
+  "operations.bol": "BOL",
+  "operations.generateBOL": "Generate BOL",
+  "operations.pickupDate": "Pick Up Date",
   "operations.createdAt": "Created At",
   "operations.price": "Price",
   "operations.quoteId": "Quote Id",
