DT-973 Add pickup time to BOL generation modal

--- a/localization/en.json
+++ b/localization/en.json
@@ -2335,6 +2335,7 @@
   "operations.bol": "BOL",
   "operations.generateBOL": "Generate BOL",
   "operations.pickupDate": "Pick Up Date",
+  "operations.pickupTimeZone": "Pick Up Time Zone",
   "operations.createdAt": "Created At",
   "operations.price": "Price",
   "operations.quoteId": "Quote Id",
