DT-973 add pickup Time input field

--- a/localization/en.json
+++ b/localization/en.json
@@ -2335,6 +2335,9 @@
   "operations.bol": "BOL",
   "operations.generateBOL": "Generate BOL",
   "operations.pickupDate": "Pick Up Date",
+  "operations.pickupTime": "Pick Up Time",
+  "operations.selectTimeZone": "Please select time zone",
+  "operations.standardTime": "00:00",
   "operations.pickupTimeZone": "Pick Up Time Zone",
   "operations.createdAt": "Created At",
   "operations.price": "Price",
