--- a/localization/en.json
+++ b/localization/en.json
@@ -2637,6 +2637,7 @@
   "marketplace.requirements": "requirements",
   "marketplace.dhsDescription": "This product is a {DhsChemicalOfInterest} and by adding this product to your order you are agreeing that your facility currently meets or will meet the regulatory standards to house this product within 60 days of receiving it. Please review this {cfats} document listing your facility's responsibilities for handling COIs.",
   "marketplace.DhsChemicalOfInterest": "DHS Chemical of Interest",
+  "marketplace.notUserPermissionsToBuy": "You have not signed documents proving you are authorized to purchase regulated products yet, or the authorization has expired. Please, check the authorization under you user settings.",
   "marketplace.cfats": "CFATS",
   "order.VENDOR": "VENDOR",
   "order.CUSTOMER": "CUSTOMER",
