--- a/localization/en.json
+++ b/localization/en.json
@@ -2306,8 +2306,8 @@
   "marketplace.confirm.deleteBid.Header": "Delete Bid",
   "marketplace.confirm.deleteBid.Content": "Do you really want to remove Bid?",
   "marketplace.viewOnly": "View Only",
-  "marketplace.WeAreVerifyingYourIdentity": "We're verifying your identity",
-  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on BlueTrade. You will only be able to view BlueTrade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
+  "marketplace.WeAreVerifyingYourIdentity": "No linked bank account",
+  "marketplace.viewOnlyPopupText": "Before you can make purchases from the Marketplace you or your company's controller must link a bank account. This can be done in My TradePass > Bank Accounts through a secure Plaid link.",
   "marketplace.keepBrowsing": "Keep Browsing",
   "marketplace.allSellers": "All Sellers",
   "myNetwork.riskMatch": "Risk Match",
