DT-1034 Two-Factor Authentication popus added.

--- a/localization/en.json
+++ b/localization/en.json
@@ -56,6 +56,11 @@
   "auth.sessionTimeout.title": "Your session will timeout in: ",
   "auth.sessionTimeout.buttonLogOut": "Log Out",
   "auth.sessionTimeout.buttonKeepWorking": "Keep Working",
+  "auth.twoFactorAuthentication": "Two-Factor Authentication",
+  "auth.weDontRecognizeDevice": "We don’t recognize this device. For your safety, select which device you would like a verification code to be sent.",
+  "auth.checkboxEmail": "Email - {value}",
+  "auth.checkboxPhone": "SMS Text - {value}",
+  "auth.pleaseEnterSixDigits": "Please Enter the six-digit code sent to your email.",
   "admin.editAlternativeNames": "Edit Alternative Names",
   "admin.registerToPaymentProcessor": "Register to Payment Processor",
   "admin.resendWelcomeEmail": "Resend Welcome Email",
