DT-1008 Packaging Type Image Upload.

--- a/localization/en.json
+++ b/localization/en.json
@@ -673,6 +673,7 @@
   "global.location": "Location",
   "global.quantity": "Quantity",
   "global.weight": "Weight",
+  "global.weightPackagingOnly": "Weight (Packaging Only)",
   "global.savedAddress": "Saved Address",
   "global.addNewAddress": "Add New Address",
   "global.savedShippingPreferences": "Saved Shipping Preferences",
@@ -990,6 +991,10 @@
   "global.height": "Height",
   "global.length": "Length",
   "global.width": "Width",
+  "global.heightAbbreviation": "H",
+  "global.lengthAbbreviation": "L",
+  "global.widthAbbreviation": "W",
+  "global.image": "Image",
   "global.expiredDate": "Expired Date",
   "global.published": "Published",
   "global.enterName": "Enter Name",
@@ -1033,8 +1038,8 @@
   "global.specifications": "Specifications",
   "global.testMethods": "Test Methods",
   "global.property": "Property",
-  "global.palletPkgMin": "Pallet Pkg Min",
-  "global.palletPkgMax": "Pallet Pkg Max",
+  "global.palletPkgMin": "Min. Packages per Pallet",
+  "global.palletPkgMax": "Max. Packages per Pallet",
   "global.and": "and",
   "global.andSpaceAround": " and ",
   "global.orSpaceAround": " or ",
@@ -1042,6 +1047,7 @@
   "global.companyGenericProductCode": "Company Generic Product Code",
   "global.companyGenericProductNameOrCode": "Company Generic Product Name Or Code",
   "global.25percentage": "25%",
+  "global.dimensions": "Dimensions",
   "global.packagingDimensions": "Packaging Dimensions",
   "global.freight": "Freight",
   "global.select": "Select",
