DT-1008 Image Upload in Packaging Type update.

--- a/localization/en.json
+++ b/localization/en.json
@@ -995,6 +995,7 @@
   "global.lengthAbbreviation": "L",
   "global.widthAbbreviation": "W",
   "global.image": "Image",
+  "global.clickToUpload": "Click to upload",
   "global.expiredDate": "Expired Date",
   "global.published": "Published",
   "global.enterName": "Enter Name",
