--- a/localization/en.json
+++ b/localization/en.json
@@ -3102,6 +3102,48 @@
   "wantedBoard.showRejected": "Show Rejected",
   "wantedBoard.showPendingCounterOffer": "Show Pending Counter Offer",
   "wantedBoard.showAccepted": "Show Accepted",
+  "wantedBoard.productInfoHeader": "Product Info",
+  "wantedBoard.respond": "Respond",
+  "wantedBoard.infoModalProductName": "Product Name",
+  "wantedBoard.infoModalQuantityNeeded": "Quantity Needed",
+  "wantedBoard.infoModalPackaging": "Packaging",
+  "wantedBoard.infoModalCondition": "Condition",
+  "wantedBoard.infoModalConforming": "Conforming",
+  "wantedBoard.infoModalGrade": "Grade",
+  "wantedBoard.infoModalForm": "Form",
+  "wantedBoard.infoModalDeliveryLocation": "Delivery Location",
+  "wantedBoard.infoModalCountryOfOrigin": "Country of Origin",
+  "wantedBoard.infoModalExpiryDate": "Expiry Date",
+  "wantedBoard.infoModalSpecialNotes": "Special Notes",
+  "wantedBoard.respondModalCreateNewListing": "Create New Listing",
+  "wantedBoard.respondModalShippingLocation": "YOUR LISTINGS AVAILABLE FOR THIS SHIPPING LOCATION",
+  "wantedBoard.respondModalPackaging": "PACKAGING",
+  "wantedBoard.respondModalAvailPackaging": "AVAIL.PKGS",
+  "wantedBoard.respondModalQuantity": "QUANTITY",
+  "wantedBoard.respondModalWarehouse": "WAREHOUSE",
+  "wantedBoard.respondModalPrice": "FOR PRICE",
+  "wantedBoard.respondModalUse": "USE",
+  "wantedBoard.myPostEdit": "Edit",
+  "wantedBoard.myPostDelete": "Delete",
+  "wantedBoard.mypostSeeListings": "See Listings",
+  "wantedBoard.editModalHeader": "Edit Wanted",
+  "wantedBoard.AddWantedButton": "Add Wanted",
+  "wantedBoard.myPostIndexProductName": "Product Name",
+  "wantedBoard.myPostEnterProductName": "Enter a requested product name",
+  "wantedBoard.myPostIndexQuantity": "Quantity Needed",
+  "wantedBoard.myPostEnterQuantity": "0",
+  "wantedBoard.myPostIndexWeightUnit": "Weight Unit/Packaging",
+  "wantedBoard.myPostIndexCountryFilter": "Delivery Country",
+  "wantedBoard.myPostIndexStateFilter": "Delivery State",
+  "wantedBoard.myPostExpiryDate": "Expiry Date",
+  "wantedBoard.myPostConforming": "Conforming",
+  "wantedBoard.myPostIndexConditionFilter": "Condition",
+  "wantedBoard.myPostIndexCountryOfOriginFilter": "Country of Origin",
+  "wantedBoard.myPostIndexGradeFilter": "Grade",
+  "wantedBoard.myPostIndexFormFilter": "Form",
+  "wantedBoard.myPostPackaing": "Packaging",
+  "wantedBoard.myPostIndexSpecialNotesFilter": "Special Notes",
+  
   "global.enabled": "Enabled",
   "global.selectTags": "Select tags",
   "global.marketSegments": "Market Segments",
