DT-1034 FE - 2FA Screens update.

--- a/localization/en.json
+++ b/localization/en.json
@@ -58,8 +58,6 @@
   "auth.sessionTimeout.buttonKeepWorking": "Keep Working",
   "auth.twoFactorAuthentication": "Two-Factor Authentication",
   "auth.weDontRecognizeDevice": "We don’t recognize this device. For your safety, select which device you would like a verification code to be sent.",
-  "auth.checkboxEmail": "Email - {value}",
-  "auth.checkboxPhone": "SMS Text - {value}",
   "auth.pleaseEnterSixDigits": "Please Enter the six-digit code sent to your email.",
   "admin.editAlternativeNames": "Edit Alternative Names",
   "admin.registerToPaymentProcessor": "Register to Payment Processor",
@@ -857,6 +855,7 @@
   "global.sdsPreparedBy": "SDS Prepared by",
   "global.sensitization": "Sensitization",
   "global.send": "Send",
+  "global.verify": "Verify",
   "global.signalWord": "Signal Word",
   "global.skinContact": "Skin Contact",
   "global.solubility": "Solubility",
