DT-1042 bug fix in wanted board

--- a/localization/en.json
+++ b/localization/en.json
@@ -3103,6 +3103,9 @@
   "wantedBoard.showPendingCounterOffer": "Show Pending Counter Offer",
   "wantedBoard.showAccepted": "Show Accepted",
   "wantedBoard.productInfoHeader": "Product Info",
+  "wantedBoard.productRespondHeader": "Respond",
+  "wantedBoard.editWantedBoardProduct": "Edit Wanted Board",
+  "wantedBoard.addWantedBoardProduct": "Add Wanted Board",
   "wantedBoard.respond": "Respond",
   "wantedBoard.infoModalProductName": "Product Name",
   "wantedBoard.infoModalQuantityNeeded": "Quantity Needed",
