DT-1042 bug fix

--- a/localization/en.json
+++ b/localization/en.json
@@ -3013,7 +3013,10 @@
   "wantedBoard.fobPrice": "FOB Price",
   "wantedBoard.maxPrice": "Max. Price/Unit",
   "wantedBoard.quantity": "Quantity",
-  "wantedBoard.quantityNeeded": "Quantity Needed",
+  "wantedBoard.quantityNeeded": "Qty.Needed",
+  "wantedBoard.shippingLocation" : "Shipping Location",
+  "wantedBoard.conforming": "Confirming",
+  "wantedBoard.postExpiry": "Post Expiry",
   "wantedBoard.orderQuantity": "Order Quantity",
   "wantedBoard.orderFrequency": "Order Frequency",
   "wantedBoard.expirationDate": "Expiration Date",
