--- a/localization/en.json
+++ b/localization/en.json
@@ -1935,6 +1935,7 @@
   "checkout.summary.conditionsOfUse": "Conditions Of Use",
   "checkout.titlePage": "{companyName} / Checkout",
   "checkout.moreResultsAreAvailable": "More results are available, please search by location name or address.",
+  "checkout.authenticationRequest": "This purchase requires your authentication. For your safety, select which device you would like a verification code to be sent.",
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
   "cart.shoppingCartHeader": "ITEMS ({number})",
