DT-1042 fix issues

--- a/localization/en.json
+++ b/localization/en.json
@@ -3149,7 +3149,7 @@
   "wantedBoard.myPostIndexFormFilter": "Form",
   "wantedBoard.myPostPackaing": "Packaging",
   "wantedBoard.myPostIndexSpecialNotesFilter": "Special Notes",
-  
+  "wantedBoard.openInMarketPlace": "Open In Marketplace",
   "global.enabled": "Enabled",
   "global.selectTags": "Select tags",
   "global.marketSegments": "Market Segments",
