DT-1002 Updated filter dropdown in Orders, Operations/Orders.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2388,20 +2388,20 @@
   "orders.accountingDocuments": "Accounting Documents",
   "orders.searchByOrderID": "Search By Order ID",
   "orders.orderDate: ": "Order Date",
-  "orders.statusOptions.all": "Show All Status",
-  "orders.statusOptions.draft": "Show Draft Status",
-  "orders.statusOptions.pending": "Show Pending Status",
-  "orders.statusOptions.inTransit": "Show In Transit Status",
-  "orders.statusOptions.review": "Show Review Status",
-  "orders.statusOptions.credit": "Show Credit Status",
-  "orders.statusOptions.completed": "Show Completed Status",
-  "orders.statusOptions.toShip": "Show To Ship Status",
-  "orders.statusOptions.returned": "Show Returned Status",
-  "orders.statusOptions.declined": "Show Declined Status",
-  "orders.statusOptions.cancelled": "Show Cancelled Status",
-  "orders.statusOptions.toReturn": "Show To Return Status",
-  "orders.statusOptions.confirmed": "Show Confirmed Status",
-  "orders.statusOptions.disputed": "Show Disputed Status",
+  "orders.statusOptions.all": "All Statuses",
+  "orders.statusOptions.draft": "Draft",
+  "orders.statusOptions.pending": "Pending",
+  "orders.statusOptions.inTransit": "In Transit",
+  "orders.statusOptions.review": "Review",
+  "orders.statusOptions.credit": "Credit",
+  "orders.statusOptions.completed": "Completed",
+  "orders.statusOptions.toShip": "To Ship",
+  "orders.statusOptions.returned": "Returned",
+  "orders.statusOptions.declined": "Declined",
+  "orders.statusOptions.cancelled": "Cancelled",
+  "orders.statusOptions.toReturn": "To Return",
+  "orders.statusOptions.confirmed": "Confirmed",
+  "orders.statusOptions.disputed": "Disputed",
   "orders.fromDateMustBeSameOrBeforeToDate": "From date must be same or before To date, please fix this issue first!",
   "settings.addUser": "Add User",
   "settings.product.offerExists": "Product cannot be edited, as it already has ProductOffers linked to it.",
