--- a/localization/en.json
+++ b/localization/en.json
@@ -2324,6 +2324,8 @@
   "marketplace.viewOnlyPopupText": "Before you can make purchases from the Marketplace you or your company's controller must link a bank account. This can be done in My TradePass > Bank Accounts through a secure Plaid link.",
   "marketplace.keepBrowsing": "Keep Browsing",
   "marketplace.allSellers": "All Sellers",
+  "marketplace.wantedBoardBids": "Wanted Board Bids",
+  "marketplace.wantedBoardBidsDescription": "Product Offers related to Wanted Board Bids",
   "myNetwork.riskMatch": "Risk Match",
   "myNetwork.riskTolerance": "Risk Tolerance",
   "myNetwork.insurance": "Insurance",
