feat: require general liability doc to be uploaded

--- a/localization/en.json
+++ b/localization/en.json
@@ -2717,6 +2717,7 @@
   "onboarding.company.slogan.or.tagline.example": "Ex. Simplifying Trade for Complex Industries",
   "onboarding.social.media": "Please include links to as many social media pages as you have.",
   "onboarding.general.liability.coi": "General Liability COI",
+  "onboarding.coi.document.mandatory": "Upload of a COI Document is required",
   "onboarding.optional.files": "What files are optional?",
   "onboarding.transportation.insurance": "Transportation Insurance COI",
   "onboarding.property.insurance.coi": "Property Insurance COI",
