DT-1196 Rework of Wanted Board Add/Edit popup.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1085,6 +1085,7 @@
   "global.na": "N/A",
   "global.emailAndPhoneNumber": "{emailAndPhoneNumber}",
   "global.insurance": "Insurance",
+  "global.post": "Post",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -3228,11 +3229,13 @@
   "wantedBoard.myPostEnterProductName": "Enter a requested product name",
   "wantedBoard.myPostIndexQuantity": "Quantity Needed",
   "wantedBoard.myPostEnterQuantity": "0",
-  "wantedBoard.myPostIndexWeightUnit": "Weight Unit/Packaging",
+  "wantedBoard.myPostUnit": "Unit",
   "wantedBoard.myPostIndexCountryFilter": "Delivery Country",
-  "wantedBoard.myPostIndexStateFilter": "Delivery State",
-  "wantedBoard.myPostExpiryDate": "Expiry Date",
+  "wantedBoard.myPostIndexStateFilter": "Delivery State/Province",
+  "wantedBoard.myPostDateNeededBy": "Date Needed By",
   "wantedBoard.myPostConforming": "Conforming",
+  "wantedBoard.myPostWillAcceptEquivalents": "Will Accept Equivalents",
+  "wantedBoard.myPostPreferredFOBPrice": "Preferred FOB Price",
   "wantedBoard.myPostIndexConditionFilter": "Condition",
   "wantedBoard.myPostIndexCountryOfOriginFilter": "Country of Origin",
   "wantedBoard.myPostIndexGradeFilter": "Grade",
@@ -3240,6 +3243,8 @@
   "wantedBoard.myPostPackaing": "Packaging",
   "wantedBoard.myPostIndexSpecialNotesFilter": "Special Notes",
   "wantedBoard.openInMarketPlace": "Open In Marketplace",
+  "wantedBoard.myPostAssayMin": "Assay Min",
+  "wantedBoard.myPostAssayMax": "Assay Max",
   "global.enabled": "Enabled",
   "global.selectTags": "Select tags",
   "global.marketSegments": "Market Segments",
