--- a/localization/en.json
+++ b/localization/en.json
@@ -143,7 +143,7 @@
   "bluePallet.anonymousBuying": "Anonymous Buying",
   "bluePallet.anonymouslySell": "Anonymously Sell to our entire network of buyers",
   "bluePallet.buyerBenefits": "Buyer Benefits",
-  "bluePallet.footerInfo": "BlueTrade only displays inventory of {companyName} Members. BlueTrade does not manufacture, distribute, or possess any products listed on the BlueTrade Marketplace. BlueTrade will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
+  "bluePallet.footerInfo": "BluePallet Marketplace only displays inventory of {companyName} Members. BluePallet Marketplace does not manufacture, distribute, or possess any products listed on the BluePallet Marketplace. BluePallet Marketplace will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
   "bluePallet.freeReturns": "Free Returns*",
   "bluePallet.insuredAR": "100% Insured AR",
   "bluePallet.netPayments": "NET10 Payments",
@@ -153,8 +153,8 @@
   "bluePallet.supplySide": "Supply Side Protections",
   "bluePallet.verifiedBuyers": "TradePass Verified Buyers",
   "bluePallet.verifiedSellers": "TradePass Verified Sellers",
-  "bluePallet.whatIs": "What is BlueTrade?",
-  "bluePallet.whatIs.answer": "BlueTrade anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through BlueTrade comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that BlueTrade transactions are safe, secure, simple, and reliable.",
+  "bluePallet.whatIs": "What is BluePallet Marketplace?",
+  "bluePallet.whatIs.answer": "BluePallet Marketplace anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through BluePallet Marketplace comes with industry leading perks. Built in supply side protections and buyer benefits ensure transactions that are safe, secure, and reliable.",
   "broadcast.byRegion": "Regions",
   "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
@@ -1165,7 +1165,7 @@
   "company.logoButtonUpload": "Upload",
   "company.logoButtonChange": "Change",
   "company.companyDetails": "Company Details",
-  "company.companyFormDescription": "The following information will help promote your business on BluePallet.",
+  "company.companyFormDescription": "The following information will help promote your business on BluePallet Marketplace.",
   "company.dbaName": "DBA Name and Phone Number",
   "company.dbaNameIfApplicable": "DBA Name {ifApplicable}",
   "company.ifApplicable": "(if applicable)",
@@ -1393,10 +1393,10 @@
   "myInventory.acceptBids": "Accept bids on offer?",
   "myInventory.whoShouldSee": "Who should see this offer?",
   "myInventory.listingShare": "Enable Listing Share for this offer?",
-  "myInventory.allSubtitle": "My Network + BlueTrade",
+  "myInventory.allSubtitle": "My Network + BluePallet Marketplace",
   "myInventory.myNetworkOnly": "My Network Only",
   "myInventory.myNetworkOnlySubtitle": "Members I'm Connected To",
-  "myInventory.bluePalletDirect": "BlueTrade",
+  "myInventory.bluePalletDirect": "BluePallet Marketplace",
   "myInventory.bluePalletDirectSubtitle": "Open Marketplace",
   "sharedListings.internalProductName": "Internal Product Name",
   "sharedListings.seller": "Seller",
@@ -2329,7 +2329,7 @@
   "marketplace.confirm.deleteBid.Content": "Do you really want to remove Bid?",
   "marketplace.viewOnly": "View Only",
   "marketplace.WeAreVerifyingYourIdentity": "We're verifying your identity",
-  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on BlueTrade. You will only be able to view BlueTrade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
+  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on BluePallet Marketplace. You will only be able to view BluePallet Marketplace listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
   "marketplace.companyNotRegistered": "Company not registered",
   "marketplace.companyNotRegisteredDescription": "To ensure a safe and secure marketplace for our network we require each company to complete registration before making any transactions. To complete your order your company must finish business registration.",
   "marketplace.keepBrowsing": "Keep Browsing",
@@ -2692,14 +2692,14 @@
   "onboarding.setup.indicator.add.another": "Add another",
   "onboarding.legal.agreements": "Legal Agreements",
   "onboarding.legal.agreements.info": "Here are a few legal documents you'll have to read and accept before finishing.",
-  "onboarding.what.is.tradepass": "TradePass is our dynamic business verification tool that keeps your business and transactions safe on our platform. We ensure network integrity by reviewing thousands of operational, commercial, and financial risk data points on a continual basis. All BluePallet members are required to complete the TradePass verification process.",
+  "onboarding.what.is.tradepass": "TradePass is our dynamic business verification tool that keeps your business and transactions safe on our platform. We ensure network integrity by reviewing thousands of operational, commercial, and financial risk data points on a continual basis. All BluePallet Marketplace members are required to complete the TradePass verification process.",
   "onboarding.what.you.need": "Here's what you need:",
   "onboarding.business.profile": "Business Profile",
   "onboarding.business.verification.info": "Business Verification authenticates the identity of your business and ensures your business meets TradePass standards.",
   "onboarding.w9": "W-9",
   "onboarding.entity.type": "Entity Type",
   "onboarding.ownership.verification.info": "Verifying the ownership of your company is required under the Bank Secrecy Act and is intended to prevent fraud, money laundering, and the financing of terrorism.",
-  "onboarding.business.profile.info": "Profiling your business ensures that operational standards are met and your representation on BluePallet is accurate and complete.",
+  "onboarding.business.profile.info": "Profiling your business ensures that operational standards are met and your representation on BluePallet Marketplace is accurate and complete.",
   "onboarding.get.verified": "Get Verified",
   "onboarding.minutes": "minutes",
   "onboarding.occupation": "Occupation",
