DT-1251 - reverted some changes back

--- a/localization/en.json
+++ b/localization/en.json
@@ -1165,7 +1165,7 @@
   "company.logoButtonUpload": "Upload",
   "company.logoButtonChange": "Change",
   "company.companyDetails": "Company Details",
-  "company.companyFormDescription": "The following information will help promote your business on BluePallet Marketplace.",
+  "company.companyFormDescription": "The following information will help promote your business on BluePallet.",
   "company.dbaName": "DBA Name and Phone Number",
   "company.dbaNameIfApplicable": "DBA Name {ifApplicable}",
   "company.ifApplicable": "(if applicable)",
@@ -2692,14 +2692,14 @@
   "onboarding.setup.indicator.add.another": "Add another",
   "onboarding.legal.agreements": "Legal Agreements",
   "onboarding.legal.agreements.info": "Here are a few legal documents you'll have to read and accept before finishing.",
-  "onboarding.what.is.tradepass": "TradePass is our dynamic business verification tool that keeps your business and transactions safe on our platform. We ensure network integrity by reviewing thousands of operational, commercial, and financial risk data points on a continual basis. All BluePallet Marketplace members are required to complete the TradePass verification process.",
+  "onboarding.what.is.tradepass": "TradePass is our dynamic business verification tool that keeps your business and transactions safe on our platform. We ensure network integrity by reviewing thousands of operational, commercial, and financial risk data points on a continual basis. All BluePallet members are required to complete the TradePass verification process.",
   "onboarding.what.you.need": "Here's what you need:",
   "onboarding.business.profile": "Business Profile",
   "onboarding.business.verification.info": "Business Verification authenticates the identity of your business and ensures your business meets TradePass standards.",
   "onboarding.w9": "W-9",
   "onboarding.entity.type": "Entity Type",
   "onboarding.ownership.verification.info": "Verifying the ownership of your company is required under the Bank Secrecy Act and is intended to prevent fraud, money laundering, and the financing of terrorism.",
-  "onboarding.business.profile.info": "Profiling your business ensures that operational standards are met and your representation on BluePallet Marketplace is accurate and complete.",
+  "onboarding.business.profile.info": "Profiling your business ensures that operational standards are met and your representation on BluePallet is accurate and complete.",
   "onboarding.get.verified": "Get Verified",
   "onboarding.minutes": "minutes",
   "onboarding.occupation": "Occupation",
