DT-1196 Updated Add/Edit Wanted Form, init values and endpoint call.

--- a/localization/en.json
+++ b/localization/en.json
@@ -3252,7 +3252,11 @@
   "wantedBoard.openInMarketPlace": "Open In Marketplace",
   "wantedBoard.myPostAssayMin": "Assay Min",
   "wantedBoard.myPostAssayMax": "Assay Max",
+  "wantedBoard.myPostRequired": "Required",
+  "wantedBoard.myPostOptionalInformation": "Optional Information",
   "wantedBoard.useExistingListing": "Use Existing Listing",
+  "wantedBoard.myPostManufacturer": "Manufacturer",
+  "wantedBoard.myPostSelectManufacturer": "Select Manufacturer",
   "wantedBoard.createNewListing": "Create New Listing",
   "global.enabled": "Enabled",
   "global.selectTags": "Select tags",
